--- a/index.html
+++ b/index.html
@@ -31,23 +31,25 @@
 
         <h1>A primeira versão</h1>
         <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" >Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" >Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p> 
-         <img>
-          <img src="assets/img/dan-droids.png" alt="dan droids">
-         </img> 
+         <picture>
+          <source media="(max-width:800px )" srcset="assets/imagens/dan-droids-pq.png">
+          <img src="assets/imagens/dan-droids.png" alt="dandroid">
+         </picture> 
         <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
 
          <h1>Surge um novo mascote</h1> 
 
         <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://en.wikipedia.org/wiki/Irina_Blok" target="_blank" >Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
-          <img>
-           <img width="800" height="230" src="assets/img/irina-blok.jpg" alt="irina blok">
-          </img>
+          <picture>
+            <source media="(max-width: 800px )" srcset="assets/imagens/irina-blok-pq.jpg">
+           <img src="assets/imagens/irina-blok.jpg" alt="irina">
+          </picture>
 
         <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p> 
 
-         <img>
-           <img width="400" height="200" src="assets/img/bugdroid.png" alt="bugdroid">
-         </img>
+         <picture >
+           <img  src="assets/imagens/bugdroid.png" class="pequeno" alt="bugdroid"> 
+         </picture>
 
         <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
